Fix: Resolve CORS issue with Nginx proxy and optimize deployment speed